--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,19 @@
-.App{
-  margin: 0;
-  padding: 0;
+#root{
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
+.App{
+  margin: 0;
+  padding: 0; 
+}
+
+
 .dish-list{
-margin-top:50px; 
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin-top: 50px; 
+
 }
