--- a/src/components/DishBar/dishbar.scss
+++ b/src/components/DishBar/dishbar.scss
@@ -1,7 +1,7 @@
 $leadColor : #fb4e4e;
 $heading-Color: #25282b;
 $SubHead-Color: #a0a4a8;
-$Bar-Shadow: 0px 3px 10px -5px #cacccf;
+$Bar-Shadow: 0px 3px 11px -3px #cacccf;
 
 .dish-cont {
   display: flex;
@@ -13,6 +13,17 @@ $Bar-Shadow: 0px 3px 10px -5px #cacccf;
   padding-left: 5px;
   margin-bottom: 8px;
   box-shadow: $Bar-Shadow;
+}
+
+.dish-cat{
+  position:relative;
+  width: 8px;
+  height: 8px;
+  bottom: 20px;
+  right: 4px;
+  border-radius:50%;
+  border: 3PX solid ;
+  
 }
 
 .dish-imgsection {
