--- a/src/components/Brand/brand.scss
+++ b/src/components/Brand/brand.scss
@@ -1,7 +1,6 @@
-$leadColor : #fb4e4e;
-$heading-Color: #25282b;
-$SubHead-Color: #a0a4a8;
-$Bar-Shadow: 0px 3px 10px -5px #cacccf;
+
+
+@import "../global/global";
 
 .brand-cont{
     display: flex;
@@ -9,7 +8,6 @@ $Bar-Shadow: 0px 3px 10px -5px #cacccf;
     margin-top: 70px;
     margin-bottom: 40px;
     align-items: center;
-
 }
 
 .brand-logo{
@@ -19,13 +17,15 @@ $Bar-Shadow: 0px 3px 10px -5px #cacccf;
 }
 
 .brand-title{
+    font-family: $leadFont;
     font-size: 24px;
     font-weight: 700;
     color: $heading-Color;
 
-}
+} 
 
 .brand-slogan{
+    font-family: $SubFont;
     font-size: 14px;
     font-weight: 400;
     color: $SubHead-Color;
