--- a/src/components/global/_global.scss
+++ b/src/components/global/_global.scss
@@ -2,6 +2,7 @@
 //Color Decalaration
 $leadColor : #2AC769;
 $heading-Color: #25282B;
+$heading-ColorL: #E8E8E8;
 $SubHead-Color: #52575C;
 $lead1: #353FDF;
 $lead2: #FB4E4E;
