Footer Added & Alignment/Size Fixed Quotes Added

--- a/src/components/global/_global.scss
+++ b/src/components/global/_global.scss
@@ -1,6 +1,6 @@
 
 //Color Decalaration
-$leadColor : #2AC769;
+$leadColor : #f07e01;
 $heading-Color: #25282B;
 $heading-ColorL: #E8E8E8;
 $SubHead-Color: #52575C;
