--- a/src/App.scss
+++ b/src/App.scss
@@ -3,8 +3,6 @@
 #root{
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   width: 100%;
 }
 
@@ -13,11 +11,29 @@
   padding: 0; 
 }
 
+.greeting-txt{
+  font-family: $leadFont;
+  font-size: $fts-3;
+  font-weight: $fw-L;
+  filter: opacity(75%);
+ text-align: left;
+ width: 95%;
+ margin: 6px;
+ padding-left: 4px;
+ line-height: 1.5;
+}
+
+.dish-section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 
 .dish-list{
   display: flex;
  flex-direction: column;
-  width: 96%;
+  width: 95%;
 }
 
 .scrolling{
