--- a/src/components/DishBar/dishbar.scss
+++ b/src/components/DishBar/dishbar.scss
@@ -19,7 +19,7 @@
   height: 6.13px;
   bottom: 22px;
   right: 4px;
-  border-radius:60%;
+  border-radius:40px;
   border: 3px solid ;
   
 }
@@ -50,7 +50,7 @@ clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
 .dish-detail {
   display: flex;
   flex-direction: column;
-  width: 85%;
+  width: 80%;
   justify-content: center;
 }
 
@@ -74,9 +74,10 @@ clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
 }
 
 .dish-price {
-  width: 20%;
+  width: 25%;
   font-family: $SubFont;
-  font-weight: $fw-M;
+  font-weight: $fw-L;
   font-size: $fts-3;
   color: #2AC769;
+  text-align: right;
 }
