MAster images added & Foodlo Logo added

--- a/src/components/Accordion/accordion.scss
+++ b/src/components/Accordion/accordion.scss
@@ -34,15 +34,16 @@
 }
 
 .accordion-itemImg{
-  width: 76px;
-  height: 76px;
+  width: 66px;
+  height: 66px;
   position: relative;
-  left: -16px;
+  left: 6px;
   bottom: 2px;
+  margin-right: 12px;
 
 }
 
 .ct-img{
-filter: drop-shadow(-5px 8px 9px black);
+filter: drop-shadow(-3px 4px 5px black);
 }
 
