--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -27,6 +27,7 @@
 .brand-con{
    display: flex;
     margin: 0px;
+    justify-content: center;
 }
 
 .left-ft{
@@ -86,4 +87,9 @@ margin-bottom: 16px;
     width: auto;
    
     
+}
+
+.footer-logo{
+    width: 80px;
+    height: auto;
 }
